block advantages text-align fix

--- a/src/styles/advantages.module.scss
+++ b/src/styles/advantages.module.scss
@@ -58,6 +58,7 @@
   padding: 10px 20px;
   position: relative;
   display: flex;
+  justify-content: center;
   align-items: center;
   text-align: center;
   font-weight: 400;
